--- a/TodoTracking/Rules.Specs/Rules.Specs.csproj
+++ b/TodoTracking/Rules.Specs/Rules.Specs.csproj
@@ -16,6 +16,7 @@
       <PackageReference Include="Machine.Specifications" Version="0.12.0" />
       <PackageReference Include="Machine.Specifications.Should" Version="0.11.0" />
       <PackageReference Include="moq" Version="4.7.*" />
+      <PackageReference Include="nsubstitute" Version="4.0.0" />
     </ItemGroup>
 
 </Project>
