--- a/TodoTracking/Core/Core.csproj
+++ b/TodoTracking/Core/Core.csproj
@@ -51,7 +51,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.9" />
+    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.9" AllowExplicitVersion="true"/>
 
     <PackageReference Include="Dolittle.AspNetCore" Version="2.*" />
     <PackageReference Include="Dolittle.SDK" Version="2.*" />
